--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,20 @@
-name: working with workflow
+name: Working with Workflow
 
 on:
   workflow_dispatch:
     inputs:
-        homedrive:
+      homedrive:
         description: 'Home drive on the machine'
         required: true
-  
+
 jobs:
   job_1:
-   runs-on:  ubuntu-latest
-   steps:
-    - run: "echo job:${{github.job}}" 
-  job_2:  
-   runs-on: ubuntu-latest
-   needs: job_1
-   steps:
-    - run: "echo job: ${{ github.job}}"
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "job: ${{ github.job }}"
 
-  
-
-  
+  job_2:
+    runs-on: ubuntu-latest
+    needs: job_1
+    steps:
+      - run: echo "job: ${{ github.job }}"
