--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: job_1
     steps:
-      - run: echo "job:${{ github.job }}"
+      - run: |
+           REPO_URL='https://github.com/aboubacardiaby/DomFinAPI.git';
+           BRANCH_NAME=main; 
+             if [ -z "$BRANCH_NAME" ]; then
+             echo "Cloning repository: $REPO_URL"
+               git clone "$REPO_URL"
