--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -9,7 +9,7 @@ jobs:
    steps:
      -  name: first step
         run:  |
-           the_scret=$((RANDOM))
+           the_secret=$((RANDOM))
            echo $the_secret
            echo ":: error file=app.js, line=1 ::missing semicolon"
    
