--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -10,6 +10,6 @@ jobs:
      -  name: first step
         run:  |
            the_secret=$((RANDOM))
-           echo $the_secret
+           echo "::add-mask::$the_secret"
            echo ":: error file=app.js, line=1 ::missing semicolon"
    
