--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -14,4 +14,14 @@ jobs:
            echo '### Hello World! :rocket:' >> $GITHUB_STEP_SUMMARY
            echo ":: error file=app.js, line=1 ::missing semicolon"
            echo $GITHUB_STEP_SUMMARY
-   
+     - name : Write summary in Action
+       uses: actions/github-script@v7.0.1
+       with:
+           script: |
+             await core.summary
+             .addHeading('Test Result')
+             .addTable([
+               [(data: 'File', header:true), {data: 'Result', header:true)], 
+                ['foo.js', 'pass ']
+                ])
+                .write()
