--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -1,31 +1,31 @@
-name: tutorial workflow
+name: tutorial-workflow
 
 on: [push, workflow_dispatch]
 
 jobs:
- job_1:
-   name: this is job number 1
-   runs-on: ubuntu-latest
-   steps:
-     -  name: first step
-        run:  |
-           the_secret=$((RANDOM))
-           echo "::add-mask::$the_secret"
-           echo '### Hello World! :rocket:' >> $GITHUB_STEP_SUMMARY
-           echo ":: error file=app.js, line=1 ::missing semicolon"
-           echo $GITHUB_STEP_SUMMARY
-    
-     - name: Write summary in Action
-       uses: actions/github-script@v7.0.1
-       with:
-           script: |
-             await core.summary
-             .addHeading('Test Result')
-             .addTable([
-               [(data: 'File', header: true), {data: 'Result', header: true)], 
-                ['foo.js', 'pass'],
+  job_1:
+    name: this is job number 1
+    runs-on: ubuntu-latest
+    steps:
+      - name: first step
+        run: |
+          the_secret=$((RANDOM))
+          echo "::add-mask::$the_secret"
+          echo '### Hello World! :rocket:' >> $GITHUB_STEP_SUMMARY
+          echo "::error file=app.js,line=1::missing semicolon"
+          echo $GITHUB_STEP_SUMMARY
+
+      - name: Write summary in Action
+        uses: actions/github-script@v7.0.1
+        with:
+          script: |
+            await core.summary
+              .addHeading('Test Result')
+              .addTable([
+                [{ data: 'File', header: true }, { data: 'Result', header: true }],
+                ['foo.js', 'Pass'],
                 ['bar.js', 'Pass'],
-                ['Test','Pass']
-                ])
-                .addLink('View Staging Deployment!','https://github.com')
-                .write()
+                ['Test', 'Pass']
+              ])
+              .addLink('View Staging Deployment!', 'https://github.com')
+              .write()
